--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,9 @@ classifiers = [
 ]
 dependencies = [
     'scikit-learn',
-    'caddo-file-parser'
+    'caddo-file-parser',
+    'numpy',
+    'pandas',
+    'pyyaml',
+    'scipy'
 ]
